2008-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-session.c (redirect_handler): Misc fixes: don't
	redirect on "300 Multiple Choices", "304 Not Modified", "305 Use
	Proxy", or any unrecognized status code. Don't redirect unsafe
	methods on 301, 302, or 307. Redirect POST to GET on 303.

	* tests/redirect-test.c: test of redirection handling behavior.

2008-02-02  Dan Winship  <danw@gnome.org>

	* libsoup/soup-method.h (SOUP_METHOD_GET, etc): Fix these so that
	direct comparisons against them actually *are* faster than doing
	strcmp, as the docs claim.

	* libsoup/soup-uri.h (SOUP_URI_SCHEME_HTTP,
	SOUP_URI_SCHEME_HTTPS): likewise

2008-02-01  Dan Winship  <danw@gnome.org>

	* libsoup/soup-address.c: Use GObject properties.
	(soup_address_new, soup_address_new_from_sockaddr)
	(soup_address_new_any): Make these just wrappers around
	g_object_new.

	* libsoup/soup-message-body.c (soup_message_body_get_type):
	* libsoup/soup-message-headers.c (soup_message_headers_get_type):
	* libsoup/soup-server.c (soup_client_context_get_type): 
	Register these as boxed types, for language bindings.

	* libsoup/soup-date.c (soup_date_get_type):
	* libsoup/soup-message-body.c (soup_buffer_get_type):
	* libsoup/soup-value-utils.c (soup_byte_array_get_type):
	* libsoup/soup-uri.c (soup_uri_get_type): Upgrade to the latest
	yummiest type-registering idiom.

2008-02-01  Dan Winship  <danw@gnome.org>

	* libsoup/soup-connection.c (soup_connection_disconnect):
	Reorganize this; emitting DISCONNECTED may cause the session to
	unref the connection, causing it to be destroyed, so do everything
	else before that. #437835 and dups. Also, call
	soup_message_cleanup_response() when requeuing an IO_ERROR-ed
	message, so soup_session_send_message() will requeue it rather
	than treating it as failed.

	* docs/reference/Makefile.am (TARGET_DIR): override this to
	include the API version, to fix the last remaining parallel
	install issue between libsoup 2.2 and 2.4. #512810, Daniel